added express jwt

--- a/pocs/jwts/package.json
+++ b/pocs/jwts/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "base64url": "^3.0.1",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
